Updated link color to fix contrast ratio

--- a/src/styles/partials/_quotation.scss
+++ b/src/styles/partials/_quotation.scss
@@ -1,7 +1,7 @@
 /* Quotation marks */
 
 a {
-    color: #26a8ed;
+    color: var(--color-link);
     text-decoration: none;
 
     &:hover {
