--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -10,6 +10,7 @@
     --color-bg: #f5f5f5;
     --color-pink: #fd0258;
     --color-green: #33e089;
+    --color-link: #1d7db1;
 
     /* Fonts */
     --font-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
